--- a/index.html
+++ b/index.html
@@ -1194,19 +1194,19 @@ context.drawLine(
 </thead>
 <tbody>
 <tr>
-<td><img style="height:64px;width:128px;" src="gfx/imageByHeight.svg"></td>
+<td><img style="height:64px;width:128px;" src="gfx/imageSizeByHeight.svg"></td>
 <td><code>undefined</code></td>
 <td><code>16</code></td>
 <td>The image will be drawn with a height of 16 millimeters and keep its aspect ratio.</td>
 </tr>
 <tr>
-<td><img style="height:64px;width:128px;" src="gfx/imageByWidth.svg"></td>
+<td><img style="height:64px;width:128px;" src="gfx/imageSizeByWidth.svg"></td>
 <td><code>16</code></td>
 <td><code>undefined</code></td>
 <td>The image will be drawn with a width of 16 millimeters and keep its aspect ratio. Since the width of the image is greater than its height, the result is smaller.</td>
 </tr>
 <tr>
-<td><img style="height:64px;width:128px;" src="gfx/imageByWidthAndHeight.svg"></td>
+<td><img style="height:64px;width:128px;" src="gfx/imageSizeByWidthAndHeight.svg"></td>
 <td><code>16</code></td>
 <td><code>16</code></td>
 <td>The image will be drawn with a width and height of 16 millimeters. Since this doesn't match the images original aspect ratio, it looks stretched.</td>
