--- a/modules/index.html
+++ b/modules/index.html
@@ -69,20 +69,61 @@
 					<dl class="tsd-comment-tags">
 						<dt>preferred</dt>
 						<dd><p><br/></p>
-							<h2 id="introduction">Introduction</h2>
+							<h2 id="index">Index</h2>
+							<h3 id="package-definition">Package definition</h3>
+							<p>For a complete description of the PiWeb custom-plot extension format, please refer to the <a href="package.html">package</a> chapter.</p>
+							<h3 id="modules">Modules</h3>
 							<p>The PiWeb custom plot API has a root module named <code>piweb</code> which encapsulates all child modules. The following child modules are available:</p>
-							<ul>
-								<li><a href="data.html"><strong><code>data</code></strong></a>: Access the databinding of the plot element</li>
-								<li><a href="drawing.html"><strong><code>drawing</code></strong></a>: Draw the content of the custom plot element</li>
-								<li><a href="environment.html"><strong><code>environment</code></strong></a>: Access settings of the PiWeb host application</li>
-								<li><a href="events.html"><strong><code>events</code></strong></a>: React to events emitted by the PiWeb host application</li>
-								<li><a href="expressions.html"><strong><code>expressions</code></strong></a>: Evaluate system variable expressions</li>
-								<li><a href="format.html"><strong><code>format</code></strong></a>: Read and write localized data</li>
-								<li><a href="logger.html"><strong><code>logger</code></strong></a>: Write entries into the piweb log</li>
-								<li><a href="properties.html"><strong><code>properties</code></strong></a>: Access the custom plot elements property grid</li>
-								<li><a href="resources.html"><strong><code>resources</code></strong></a>: Access resources that are located in the extension package</li>
-								<li><a href="tooltips.html"><strong><code>tooltips</code></strong></a>: Create tooltip content for the PiWeb Monitor info mode</li>
-							</ul>
+							<table>
+								<thead>
+									<tr>
+										<th>Module</th>
+										<th>Description</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td><a href="data.html"><strong><code>data</code></strong></a></td>
+										<td>Access the databinding of the plot element</td>
+									</tr>
+									<tr>
+										<td><a href="drawing.html"><strong><code>drawing</code></strong></a></td>
+										<td>Draw the content of the custom plot element</td>
+									</tr>
+									<tr>
+										<td><a href="environment.html"><strong><code>environment</code></strong></a></td>
+										<td>Access settings of the PiWeb host application</td>
+									</tr>
+									<tr>
+										<td><a href="events.html"><strong><code>events</code></strong></a></td>
+										<td>React to events emitted by the PiWeb host application</td>
+									</tr>
+									<tr>
+										<td><a href="expressions.html"><strong><code>expressions</code></strong></a></td>
+										<td>Evaluate system variable expressions</td>
+									</tr>
+									<tr>
+										<td><a href="format.html"><strong><code>format</code></strong></a></td>
+										<td>Read and write localized data</td>
+									</tr>
+									<tr>
+										<td><a href="logger.html"><strong><code>logger</code></strong></a></td>
+										<td>Write entries into the piweb log</td>
+									</tr>
+									<tr>
+										<td><a href="properties.html"><strong><code>properties</code></strong></a></td>
+										<td>Access the custom plot elements property grid</td>
+									</tr>
+									<tr>
+										<td><a href="resources.html"><strong><code>resources</code></strong></a></td>
+										<td>Access resources that are located in the extension package</td>
+									</tr>
+									<tr>
+										<td><a href="tooltips.html"><strong><code>tooltips</code></strong></a></td>
+										<td>Create tooltip content for the PiWeb Monitor info mode</td>
+									</tr>
+								</tbody>
+							</table>
 						</dd>
 					</dl>
 				</div>
