--- a/modules/properties.html
+++ b/modules/properties.html
@@ -95,6 +95,7 @@
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="properties.html#getbooleanproperty" class="tsd-kind-icon">get<wbr>Boolean<wbr>Property</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="properties.html#getbrushproperty" class="tsd-kind-icon">get<wbr>Brush<wbr>Property</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="properties.html#getcolorproperty" class="tsd-kind-icon">get<wbr>Color<wbr>Property</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="properties.html#getcolorschemeproperty" class="tsd-kind-icon">get<wbr>Color<wbr>Scheme<wbr>Property</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="properties.html#getdoubleproperty" class="tsd-kind-icon">get<wbr>Double<wbr>Property</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="properties.html#getenumproperty" class="tsd-kind-icon">get<wbr>Enum<wbr>Property</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="properties.html#getfontproperty" class="tsd-kind-icon">get<wbr>Font<wbr>Property</a></li>
@@ -164,7 +165,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in properties.ts:70</li>
+									<li>Defined in properties.ts:84</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -217,6 +218,37 @@
 					</ul>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module">
+					<a name="getcolorschemeproperty" class="tsd-anchor"></a>
+					<h3>get<wbr>Color<wbr>Scheme<wbr>Property</h3>
+					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
+						<li class="tsd-signature tsd-kind-icon">get<wbr>Color<wbr>Scheme<wbr>Property<span class="tsd-signature-symbol">(</span>id<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="../classes/drawing.color.html" class="tsd-signature-type">Color</a><span class="tsd-signature-symbol">[]</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in properties.ts:70</li>
+								</ul>
+							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Returns the value of the property with the name <code>id</code> as an array of colors.</p>
+								</div>
+							</div>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>id: <span class="tsd-signature-type">string</span></h5>
+									<div class="tsd-comment tsd-typography">
+										<p>The name of the property.</p>
+									</div>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <a href="../classes/drawing.color.html" class="tsd-signature-type">Color</a><span class="tsd-signature-symbol">[]</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module">
 					<a name="getdoubleproperty" class="tsd-anchor"></a>
 					<h3>get<wbr>Double<wbr>Property</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
@@ -257,7 +289,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in properties.ts:94</li>
+									<li>Defined in properties.ts:108</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -288,7 +320,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in properties.ts:86</li>
+									<li>Defined in properties.ts:100</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -350,7 +382,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in properties.ts:78</li>
+									<li>Defined in properties.ts:92</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -461,6 +493,9 @@
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-external-module">
 						<a href="properties.html#getcolorproperty" class="tsd-kind-icon">get<wbr>Color<wbr>Property</a>
+					</li>
+					<li class=" tsd-kind-function tsd-parent-kind-external-module">
+						<a href="properties.html#getcolorschemeproperty" class="tsd-kind-icon">get<wbr>Color<wbr>Scheme<wbr>Property</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-external-module">
 						<a href="properties.html#getdoubleproperty" class="tsd-kind-icon">get<wbr>Double<wbr>Property</a>
