--- a/classes/data.measurement.html
+++ b/classes/data.measurement.html
@@ -236,7 +236,7 @@
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
-									<p>Gets the values that are associated to this measurement. In case you fetched the measurements without values, the set is empty.</p>
+									<p>Returns an iter over all values that are associated to this measurement. In case you fetched the measurements without values, the set is empty.</p>
 								</div>
 							</div>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Iter</span><span class="tsd-signature-symbol">&lt;</span><a href="data.measurementvalue.html" class="tsd-signature-type">MeasurementValue</a><span class="tsd-signature-symbol">&gt;</span></h4>
