--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 				</ul>
 				<p>The package structure looks like the following:</p>
 				<p><img class="framed" src="media/folder_structure.png"/></p>
+				<p><strong>Hint:</strong> You can download the result of the quickstart guide <a href="https://github.com/ZEISS-PiWeb/PiWeb-Customplot/raw/master/MyExtension.zip">here</a>.</p>
 				<h3 id="1-create-the-folder-myextension-">1. Create the folder <code>MyExtension</code></h3>
 				<p>In case the <code>Extensions</code> folder doesn&#39;t exist, you must <strong>create</strong> it first. Place it in one of the folders listed above. Now <strong>create your project folder</strong> in the extensions folder and name it <code>MyExtension</code>.</p>
 				<h3 id="2-create-the-file-package-json-">2. Create the file <code>package.json</code></h3>
